# DRP-Processing

./: .gitignore  README.md  background_subtraction_visualization.ipynb  config.yaml  data_config.yaml  direction.py  drp_processing.py  exp_param.yaml  fft_pipeline.ipynb  main.ipynb  main.py  map_visualise.ipynb  processing.py  pyproject.toml  requirements.txt  test_processing.py
data/cache/: data_config.yaml
io/: __init__.py
paperdrm/: __init__.py  config.py  drp_compute.py  drp_direction.py  drp_plot.py  image_io.py  imagepack.py  imageparam.py  line_detection.py  paths.py  preprocess.py  settings.py  spectral_tv.py
scripts/: bg_blur.py  rgb2grey.py
src/: __init__.py  config.py  drp_analysis.py  drp_compute.py  drp_direction.py  hough.py  image_io.py  imagepack.py  imageparam.py  line_detection.py  roi.py
utils/: __init__.py  image_loader.py  image_utils.py  masks.py
